--- a/scss/pages/_checkout-invoice.scss
+++ b/scss/pages/_checkout-invoice.scss
@@ -34,23 +34,23 @@
         flex: 1;
       }
     }
-    > input {
-      background: $primary-light;
-      border: 0;
-      color: $success;
-      font-size: 1rem;
-      padding: 17px 0 17px 20px;
-      margin-bottom: 30px;
-      width: 100%;
-    }
+    // > input {
+    //   background: $primary-light;
+    //   border: 0;
+    //   color: $success;
+    //   font-size: 1rem;
+    //   padding: 17px 0 17px 20px;
+    //   margin-bottom: 30px;
+    //   width: 100%;
+    // }
   }
-  label {
-    display: block;
-    color: $primary-light;
-    font-size: 1.25rem;
-    line-height: 28px;
-    margin-bottom: 8px;
-  }
+  // label {
+  //   display: block;
+  //   color: $primary-light;
+  //   font-size: 1.25rem;
+  //   line-height: 28px;
+  //   margin-bottom: 8px;
+  // }
 }
 
 .p-progressBar-2 {
@@ -87,17 +87,100 @@
   border: 1px solid $primary-light;
   color: $primary-light;
   cursor: pointer;
+  display: block;
   flex: 1;
   padding: 14px;
   line-height: 28px;
   font-size: 1.25rem;
+  text-align: center;
   &:hover {
     background: $primary-light;
     color: $primary-dark;
+    transition: .3s;
+  }
+  input {
+    display: none;
   }
 }
 
-.checkout-btn {
+.p-eInvoiceForm {
+  display: none;
+  label {
+    display: block;
+    color: $primary-light;
+    font-size: 1.25rem;
+    line-height: 28px;
+    margin-bottom: 8px;
+  }
+  input {
+      background: $primary-light;
+      border: 0;
+      color: $success;
+      font-size: 1rem;
+      padding: 17px 0 17px 20px;
+      margin-bottom: 30px;
+      width: 100%;
+  }
+}
+.p-postInvoiceForm {
+  display: none;
+  label {
+    display: block;
+    color: $primary-light;
+    font-size: 1.25rem;
+    line-height: 28px;
+    margin-bottom: 8px;
+  }
+  > input {
+      background: $primary-light;
+      border: 0;
+      color: $success;
+      font-size: 1rem;
+      padding: 17px 0 17px 20px;
+      margin-bottom: 30px;
+      width: 100%;
+  }
+  &-header {
+    display: flex;
+    justify-content: space-between;
+    input {
+      display: inline-block;
+      width: 1rem;
+      height: 1rem;
+      border: 0;
+    }
+    span {
+      display: inline-block;
+      font-size: 1rem;
+    }
+  }
+  &-address {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
+    select {
+      background: $primary-light;
+      border: 0;
+      color: $success;
+      font-size: 1rem;
+      padding: 17px 0 17px 20px;
+      width: 49%;
+    }
+  }
+}
+#p-eInvoiceBtn, #p-postInvoiceBtn {
+  display: none;
+}
+#p-eInvoiceBtn:checked~.p-btn-group .p-eInvoice, 
+#p-postInvoiceBtn:checked~.p-btn-group .p-postInvoice {
+  background: $primary-light;
+  color: $primary-dark;
+}
+#p-eInvoiceBtn:checked~.p-eInvoiceForm, 
+#p-postInvoiceBtn:checked~.p-postInvoiceForm{
+  display: block;
+}
+.p-checkout-btn {
   background: $secondary;
   color: $primary-dark;
   cursor: pointer;
@@ -107,6 +190,10 @@
   text-align: center;
   text-decoration: none;
   padding: 19px 0 13px 0;
+  &:hover {
+    color: $danger;
+    transition: .3s;
+  }
 }
 
 .p-order {
