--- a/scss/pages/_checkout-invoice.scss
+++ b/scss/pages/_checkout-invoice.scss
@@ -187,6 +187,7 @@
   cursor: pointer;
   display: block;
   font-size: 1.5rem;
+  font-weight: 500;
   line-height: 33px;
   text-align: center;
   text-decoration: none;
